k8s/apps/exclusive-http-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exclusive-http-server
  labels:
    app: exclusive-http-server
spec:
  selector:
    matchLabels:
      app: exclusive-http-server
  template:
    metadata:
      labels:
        app: exclusive-http-server
    spec:
      containers:
      - name: exclusive-http-server
        image: ghcr.io/walnuts1018/exclusive-http-server:c2a71f8ece222fb172124ef41891bbaf949fb5ba-8 # {"$imagepolicy": "default:exclusive-http-server"}
        ports:
        - name: http
          containerPort: 8080
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 100Mi
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
      nodeSelector:
        kubernetes.io/arch: amd64
