k8s/apps/exclusive-http-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exclusive-http-server
  labels:
    app: exclusive-http-server
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: exclusive-http-server
  type: ClusterIP
