k8s/apps/exclusive-http-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exclusive-http-server
spec:
  ingressClassName: "nginx"
  rules:
  - host: "counter.walnuts.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: exclusive-http-server
            port:
              number: 8080
